Enable smex, dashboard, smartparens, beacon

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ packages
 # Package-specific
 projectile-bookmarks.eld
 ido.last
+recentf
+smex-items
 
 # Created by https://www.gitignore.io/api/macos,emacs
 # Edit at https://www.gitignore.io/?templates=macos,emacs
