--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,15 @@ themes
 packages
 .emacs.desktop
 .emacs.desktop.lock
-*.org
+
 
 # Package-specific
 projectile-bookmarks.eld
 ido.last
 recentf
 smex-items
+bookmarks
+*.org
 
 # Created by https://www.gitignore.io/api/macos,emacs
 # Edit at https://www.gitignore.io/?templates=macos,emacs
